--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,22 @@
+.nav-header {
+  display:flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-right: 20px;
+}
+
+.nav-header * {
+  margin-top: 20px;
+}
+
+.hide {
+  cursor: pointer;
+  visibility: hidden;
+}
+
 .login-button {
-  margin: 20px;
   display: flex;
   align-items: center;
-  justify-content: flex-end;
   cursor: pointer;
 }
 
@@ -11,9 +25,12 @@
   background-color: white;
 }
 
-.nav-section {
+.nav-logo {
   display: flex;
   justify-content: center;
+}
+
+.nav-logo img {
   cursor: pointer;
 }
 
@@ -40,11 +57,11 @@
   border-bottom: 2px solid darkgray;
 }
 
-input {
+.search input {
   border: none;
 }
 
-input:focus {
+.search input:focus {
   outline: none;
 }
 
@@ -107,6 +124,60 @@ input:focus {
   background-color: black;
 }
 
-@media screen and (max-width: 991px) {
-  
+.side-menu {
+  display: none;
+}
+
+@media screen and (max-width: 1024px) {
+  .hide {
+    margin-left: 20px;
+    visibility:visible;
+  }
+
+  .menu-area {
+    display: none;
+  }
+
+  .side-menu {
+    display: block;
+    height: 100%;
+    width: 250px;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: burlywood;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+    z-index:2
+  }
+
+  .side-menu-list button {
+    margin: 5px;
+    border: none;
+    background: none;
+    width: 120px;
+  }
+
+  .side-menu .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+    border: none;
+    background: none;
+  }
+
+  .side-menu-list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .side-menu-list button:hover {
+    background-color: beige;
+    border-radius: 3px;
+  }
 }
