--- a/src/App.css
+++ b/src/App.css
@@ -160,7 +160,7 @@
     width: 120px;
   }
 
-  .side-menu .closebtn {
+  .side-menu .close-btn {
     position: absolute;
     top: 0;
     right: 25px;
